--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="container">
     <div class="row">
         <header class="col-md-12 mt-2">
-    
+
             <!--Navbar-->
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
@@ -72,10 +72,29 @@
             <!--Navbar-->
         </header>
     </div>
+
+    <div class="row">
+        <div class="col-md-8 mt-3">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item">
+                        <a href="#">Inicio</a>
+                    </li>
+                    <li class="breadcrumb-item">
+                        <a href="#">Desarrollo Web</a>
+                    </li>
+                    <li class="breadcrumb-item">
+                        <a href="#">Componentes de Botstrap</a>
+                    </li>
+                </ol>
+            </nav>
+        </div>
+    </div>
+
 </div>
 
-<script type="text/javascript" src="/jquery/jquery-3.7.1.min.js"></script>
-<script type="text/javascript" src="/bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="jquery/jquery-3.7.1.min.js"></script>
+<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 
 <body>
 
