--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <!--Navbar-->
         </header>
     </div>
-
+    <!--Migas de pan-->
     <div class="row">
         <div class="col-md-8 mt-3">
             <nav aria-label="breadcrumb">
@@ -88,8 +88,15 @@
                     </li>
                 </ol>
             </nav>
+            <!--badge-->
+            <h2>
+                <span class="badge bg-success">Nuevo</span>
+                Componentes de Bootstrap
+            </h2>
+            <!--badge-->
         </div>
     </div>
+    <!--Migas de pan-->
 
 </div>
 
