--- a/index.html
+++ b/index.html
@@ -88,12 +88,47 @@
                     </li>
                 </ol>
             </nav>
+
+            <!--Slider-->
+            <div id="slider" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="Sin título.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="Sin título2.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="Sin título3.jpg" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#slider" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#slider" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+
+            <!--Slider-->
             <!--badge-->
             <h2>
                 <span class="badge bg-success">Nuevo</span>
                 Componentes de Bootstrap
             </h2>
             <!--badge-->
+        </div>
+
+        <div class="col-md-4">
+            <div class="jumbotron my-5">
+                <h1 class="display-6">Bienvenido a mi web</h1>
+                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, officiis! </p>
+                <hr class="my-2">
+                <p>Identificate en la web</p>
+                <a href="#" class="btn btn-primary btn-lg">Login</a>
+            </div>
         </div>
     </div>
     <!--Migas de pan-->
@@ -154,7 +189,13 @@
 
 <script type="text/javascript" src="jquery/jquery-3.7.1.min.js"></script>
 <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-
+<script>
+    $(document).ready(function(){
+        $(".carousel").#slider({
+            interval: 1000
+        });
+    })
+</script>
 <body>
 
 </html>
